# observable-ssta

./: .gitignore  LICENSE  README.md  observablehq.config.ts  pyproject.toml
docs/: demo.mov  index.md  plot.md
docs/components/: timeline.js
docs/data/: ssta.json.py
